# donut

./: .gitignore  CMakeLists.txt  Makefile  Makefile_linux  README.md  RECIPE.md  autostart.sh  deps.sh  generateWavetables.py  midi.sh
.donut_runtime/presets/: default.json  example.donutpreset  template.json  test-preset.donutpreset  test-preset.json  test_123.donutpreset
.donut_runtime/wavetable/: noise_44100.txt  noise_48000.txt  noise_96000.txt  sine.txt  sine_44100.txt  sine_48000.txt  sine_96000.txt  square.txt  square_44100.txt  square_48000.txt  square_96000.txt  triangle.txt  triangle_44100.txt  triangle_48000.txt  triangle_96000.txt
Include/: Global.h  main_darwin.h
Include/DSP/: AddAndDivide.h  BandPassFilter.h  Buffer.h  CombFilter.h  DelayLine.h  Filter.h  FilterDelayLine.h  FloatBuffer.h  HighPassFilter.h  LowPassFilter.h  MultiFloatBuffer.h  StereoOutputBuffer.h
Include/Effect/: AutoMaster.h  Fold.h  StereoDelay.h
Include/Modulator/: ADSR.h  LFO.h  Modulator.h  RandomGenerator.h  Sequencer.h
Include/Source/: Oscillator.h  ParticleLayer.h  Particles.h  Sampler.h  Saw.h  Sine.h  Source.h  Square.h  Supersaw.h  Tensions.h  TestSynth.h  WaveShaper.h  WaveTable.h
Include/System/: CommandPool.h  ControlMap.h  DeveloperUtility.h  GUI.h  ModMatrix.h  Note.h  NoteHandler.h  ParameterStore.h  PresetEngine.h  SampleLibrary.h  Scheduler.h  Tables.h  Voice.h
Include/ext/: AudioFile.h  Fontaudio.h  RtMidi.h  ctre.h  jack_module.h
imgui/: CMakeLists.txt
imgui/backends/: imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp
src/: AD.cpp  ADSR.cpp  AddAndDivide.cpp  AllPassFilter.cpp  Amplitude.cpp  Analyzer.cpp  AutoMaster.cpp  BandPassFilter.cpp  Biquad.cpp  Buffer.cpp  CombFilter.cpp  CommandPool.cpp  ConcatEngine.cpp  ControlMap.cpp  DelayLine.cpp  DeveloperUtility.cpp  DryWetMixer.cpp  Envelope.cpp  Filter.cpp  FilterDelayLine.cpp  FloatBuffer.cpp  Fold.cpp  GUI.cpp  HighPassFilter.cpp  LFO.cpp  LowPassFilter.cpp  MidiHandler.cpp  ModMatrix.cpp  Modulator.cpp  MultiFloatBuffer.cpp  Note.cpp  NoteHandler.cpp  Oscillator.cpp  PanningInterface.cpp  ParameterStore.cpp  ParticleLayer.cpp  Particles.cpp  PresetEngine.cpp  RandomGenerator.cpp  RtMidi.cpp  (+23 more)
src/Header/: AD.h  ADSR.h  AddAndDivide.h  AllPassFilter.h  Amplitude.h  Analyzer.h  AutoMaster.h  Buffer.h  CommandHandler.h  CommandPool.h  ConcatEngine.h  ControlMap.h  DelayLine.h  DryWetMixer.h  Envelope.h  Exciter.h  Filter.h  FilterDelayLine.h  FloatBuffer.h  Global.h  LFO.h  LowPassFilter.h  MidiHandler.h  ModMatrix.h  Modulator.h  MultiFloatBuffer.h  Note.h  NoteHandler.h  Oscillator.h  PanningInterface.h  ParameterStore.h  ParticleLayer.h  Preset.h  PresetEngine.h  RtMidi.h  Sampler.h  Saw.h  Sequencer.h  Sine.h  Source.h  (+12 more)
src/dsp/: AllPassFilter.cpp  Biquad.cpp  CombFilter.cpp  DelayLine.cpp  Filter.cpp  FloatBuffer.cpp  LowPassFilter.cpp
src/dsp/Header/: AllPassFilter.h  Biquad.h  DelayLine.h  Filter.h  FloatBuffer.h  LowPassFilter.h
src/ext/: RtMidi.cpp  jack_module.cpp
src/fx/Header/: PanningInterface.h
src/mod/: AD.cpp  ADSR.cpp
src/mod/Header/: AD.h  ADSR.h  LFO.h  Modulator.h
src/osc/: Oscillator.cpp  Saw.cpp  Sine.cpp  Square.cpp  Supersaw.cpp
src/osc/Header/: Oscillator.h  Square.h  Supersaw.h
src/ui/: Knob.cpp  Trigger.cpp  led.cpp
src/ui/Header/: Knob.h  Trigger.h  led.h
src/util/: Analyzer.cpp  CommandPool.cpp  jack_module.cpp  main_darwin.cpp
src/util/Header/: Amplitude.h  Analyzer.h  CommandPool.h  TestSynth.h  dsp.h  jack_module.h  main_darwin.h
